--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "midi_library"]
 	path = midi_library
-	url = https://github.com/pvrs12/midi_library.git
+	url = https://github.com/pvrs12/midi_library
